@@ -16,6 +16,9 @@ debhelper (13.2.2) UNRELEASED; urgency=medium
   * d/control: Remove transitional package for dh-systemd.  Thanks
     to Michael Biebl for poking reverse dependencies to migrate and
     getting us ready to remove it.  (Closes: #871312)
+  * cmake.pm: Pass VERBOSE=1 to make by default when building to
+    ensure that gmock builds are also verbose.  Thanks to
+    Johannes Schauer for reporting the issue.  (Closes: #973029)
 
   [ Michael Biebl ]
   * autoscripts/postrm-systemd-reload-only: Run daemon-reload on
